# GuitarPan

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  GuitarPanEngine.cpp  GuitarPanEngine.h  PanSynth.cpp  PanSynth.h  native-lib.cpp
app/src/main/java/com/example/guitarpan/: MainActivity.kt  MusicalNote.kt  NoteLayout.kt
app/src/main/java/com/example/guitarpan/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml  button_debug.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
